<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_launcher_foreground" />

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/btn_link_sign_in_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/item_button_home"

            android:orientation="horizontal"

            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:contentDescription="@string/img_google"
                android:src="@drawable/img_google" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/semibold"
                android:gravity="center"
                android:text="@string/sign_in_with_google"
                android:textColor="@color/textColor"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_link_sign_in_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/item_button_home"

            android:orientation="horizontal"

            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:contentDescription="@string/img_facebook"
                android:src="@drawable/img_facebook" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/semibold"
                android:gravity="center"
                android:text="@string/sign_in_with_facebook"
                android:textColor="@color/textColor"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_link_sign_in_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/item_button_home"

            android:orientation="horizontal"

            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:contentDescription="@string/img_facebook"
                android:src="@drawable/img_user" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/semibold"
                android:gravity="center"
                android:text="@string/sign_in_with_email"
                android:textColor="@color/textColor"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#50000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/semibold"
                android:text="@string/or"
                android:textColor="@color/textColor"
                android:textSize="13sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#50000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_link_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_button_home"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/semibold"
                android:gravity="center"
                android:text="@string/create_an_account"
                android:textColor="@color/textColor"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>